Algorithm working and updated